--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "mods/digilines"]
 	path = mods/digilines
 	url = https://github.com/minetest-mods/digilines.git
+[submodule "mods/minetestmapper"]
+	path = mods/minetestmapper
+	url = https://github.com/minetest/minetestmapper.git
