switch to standalone dumpnodes
This is a different repository with an almost identical version of dumpnodes.
The directory structure of minetestmapper was not suitable to include right
in 'mods', and it was convenient to have everything packaged that way.

--- a/.gitmodules
+++ b/.gitmodules
@@ -115,6 +115,6 @@
 [submodule "mods/digilines"]
 	path = mods/digilines
 	url = https://github.com/minetest-mods/digilines.git
-[submodule "mods/minetestmapper"]
-	path = mods/minetestmapper
-	url = https://github.com/minetest/minetestmapper.git
+[submodule "mods/dumpnodes"]
+	path = mods/dumpnodes
+	url = https://github.com/Montandalar/dumpnodes
